style up header and footer. contain page to 1920 width issue with alignment at full width.

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,8 @@ html, body, #root {
   column-gap: 16px;
   row-gap: 16px;
   padding: 16px;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
 }
+
