--- a/src/SiteHeader/SiteHeader.scss
+++ b/src/SiteHeader/SiteHeader.scss
@@ -1,6 +1,33 @@
 @import '../colours';
 
 .Header {
-  padding: 16px;
   background-color: $silent-midnight;
+  padding: 16px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.Content {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.SiteName {
+  margin: 0;
+}
+
+nav {
+
+  a {
+
+    padding: 8px;
+    text-decoration: none;
+    color: $glimmering-silver;
+
+  }
+
 }
